# ArrayScope

./: .envrc  .gitignore  AGENTS.md  CHANGELOG.md  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml  pypi-release.yml  tests.yml
arrayscope/: __init__.py  __main__.py  _version.py  arrayscope.py  cache_status.py  colormaps.py  dialogs.py  dim_ops.py  file_interpreters.py  imageview2d.py  launch.py  line_plot.py  operation_coordinator.py  operation_dock.py  operation_evaluator.py  operation_pipeline.py  operation_recipes.py  operation_registry.py  operation_stack.py  profile.py  profile_coordinator.py  profile_dock.py  qt_binding.py  selectors.py  settings_state.py  slice_engine.py  video_export.py  view_state.py  widgets.py  window.py
arrayscope/app/: errors.py  launch.py  settings_state.py  theme.py
arrayscope/core/: array_metadata.py  axis_info.py  axis_utils.py  cache_status.py  compare.py  compute_policy.py  diagnostics_jsonl.py  diagnostics_trace.py  dimension_roles.py  histograms.py  latency_feedback.py  memory_budget.py  memory_policy.py  resource_governor.py  resource_telemetry.py  roi.py  roi_store.py  runtime_diagnostics.py  scheduler.py  slice_selection.py  view_recipe.py  view_state.py  window_levels.py
arrayscope/display/: backend_contract.py  colormap_policy.py  colormaps.py  commit.py  geometry.py  histogram_controller.py  image_upload.py  image_view_factory.py  imageview2d.py  interaction.py  layers.py  levels.py  line_plot.py  lod.py  montage.py  montage_tile_layer.py  overlay_hit_test.py  overlays.py  planning.py  profile_marker.py  rendering_benchmarks.py  roi_items.py  scene.py  shader_mapping.py  slice_engine.py  viewport.py  vispy_imageview2d.py  vispy_tiled_renderer.py
arrayscope/export/: video.py  workflow.py
arrayscope/io/: file_interpreters.py  numpy_save.py  numpy_save_qt.py  selectors.py
arrayscope/operations/: benchmarks.py  cache.py  cancellation.py  capabilities.py  chunked.py  chunked_stage.py  coordinator.py  cost.py  dim_ops.py  evaluator.py  fft_backend.py  optimizer.py  pipeline.py  planner.py  recipes.py  regions.py  registry.py  render_plan.py  slabs.py  stack.py  (+3 more)
docs/: README.md  analysis-phase4b.md  architecture.md  comparison.md  context-phase4c.md  context-phase4e.md  context-phase4f-phase4g.md  context-phase4h.md  current-state.md  ideas.md  index.md  manual-regression-phase4a.md  manual-regression-phase4d.md  manual-regression-phase4e-p4.md  manual-regression-phase4f.md  manual-regression-phase4g.md  manual-regression-phase4h.md  manual-regression-phase4i.md  manual-regression-vispy-v24.md  manual-regression-wayland-panels.md  mission.md  project-status.md  roadmap.md
ndslice/: __main__.py  file_interpreters.py  ndslice.py  selectors.py  video_export.py
test/: screenshot_test.py
tests/: conftest.py  test_axis_utils.py  test_cache_status.py  test_dim_ops.py  test_dimension_roles.py  test_imageview2d.py  test_numpy_save.py  test_operation_coordinator.py  test_operation_pipeline.py  test_operation_registry_recipes_evaluator.py  test_operation_stack.py  test_profile.py  test_profile_coordinator.py  test_qt_binding.py  test_qt_smoke_artifacts.py  test_slice_engine.py  test_theme_settings.py  test_view_state.py  test_window_levels.py
(+242 files in other folders)
