[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arrayscope"
version = "0.0.1"
description = "Interactive N-dimensional numpy array viewer with FFT support"
readme = "README.md"
authors = [
    {name = "Henric Rydén", email = "henric.ryden@gmail.com"}
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Visualization",
]
keywords = ["visualization", "numpy", "fft", "image-viewer", "data-visualization"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pyqtgraph>=0.14.0",
    "PySide6>=6.4.0",
    "h5py>=3.0.0",
    "scipy>=1.7.0",
    "pydicom>=2.4.0",
    "nibabel>=4.0.0",
    "imageio>=2.9.0",
    "imageio-ffmpeg>=0.4.2",
    "Pillow>=8.0.0",
]

[project.scripts]
arrayscope = "arrayscope.__main__:main"

[project.optional-dependencies]
dev = [
    "build>=0.10.0",
    "pytest>=7.0.0",
    "twine>=4.0.0",
]
[project.urls]
Homepage = "https://github.com/henricryden/arrayscope"
Documentation = "https://github.com/henricryden/arrayscope#readme"
"Bug Tracker" = "https://github.com/henricryden/arrayscope/issues"

[tool.setuptools.packages.find]
include = ["arrayscope*"]
